# mpaheader

./: CMakeLists.txt  README.md
include/: apetag.hpp  id3v1tag.hpp  id3v2tag.hpp  lametag.hpp  lyrics3tag.hpp  mpacstdfile.hpp  mpadefinitions.hpp  mpaendoffileexception.hpp  mpaexception.hpp  mpafile.hpp  mpafilestream.hpp  mpaframe.hpp  mpaheader.hpp  mpastream.hpp  musicmatchtag.hpp  tag.hpp  tags.hpp  vbrheader.hpp  vbriheader.hpp  xingheader.hpp
src/: apetag.cpp  helper.cpp  helper.hpp  id3v1tag.cpp  id3v2tag.cpp  lametag.cpp  lyrics3tag.cpp  mpacstdfile.cpp  mpaendoffileexception.cpp  mpaexception.cpp  mpafile.cpp  mpafilestream.cpp  mpafilestream_posix.cpp  mpafilestream_posix.hpp  mpafilestream_win32.cpp  mpafilestream_win32.hpp  mpaframe.cpp  mpaheader.cpp  mpastream.cpp  musicmatchtag.cpp  pch.hpp  tag.cpp  tags.cpp  vbrheader.cpp  vbriheader.cpp  xingheader.cpp
